--- a/RestaurantSigloXXI/Vista/Vista.csproj
+++ b/RestaurantSigloXXI/Vista/Vista.csproj
@@ -183,6 +183,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ComboBoxItem1.cs" />
+    <Compile Include="ListadoCliente.xaml.cs">
+      <DependentUpon>ListadoCliente.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Service References\WSBancoEstado\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -196,6 +199,10 @@
     <Page Include="Cliente.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ListadoCliente.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Login.xaml">
       <SubType>Designer</SubType>
@@ -270,6 +277,7 @@
       <SubType>Designer</SubType>
     </None>
     <Resource Include="Imagenes\Business-Man02.png" />
+    <Resource Include="Imagenes\Command-Refresh-blue.png" />
     <Resource Include="Resources\Entypo.ttf" />
   </ItemGroup>
   <ItemGroup>
@@ -294,7 +302,6 @@
   <ItemGroup>
     <Resource Include="Imagenes\Business-Man03.png" />
     <Resource Include="Imagenes\Command-Refresh-Black.png" />
-    <Resource Include="Imagenes\Command-Refresh-blue.png" />
     <Resource Include="Imagenes\Command-Refresh-white.png" />
     <Resource Include="Imagenes\Logout.png" />
   </ItemGroup>
@@ -334,6 +341,22 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Imagenes\LogoFinal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Imagenes\insta.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Imagenes\LogoFinal2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Imagenes\Agenda-Blanco.png" />
+    <Resource Include="Imagenes\Bowl.png" />
+    <Resource Include="Imagenes\comida.png" />
+    <Resource Include="Imagenes\employee.png" />
+    <Resource Include="Imagenes\ListadoClientes.png" />
+    <Resource Include="Imagenes\Restaurant.png" />
+    <Resource Include="Imagenes\Spices-Salt-Pepper.png" />
+    <Resource Include="Imagenes\User-Group.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
