cliente y listado todo ok funcionando

--- a/RestaurantSigloXXI/Vista/Vista.csproj
+++ b/RestaurantSigloXXI/Vista/Vista.csproj
@@ -358,6 +358,9 @@
     <Resource Include="Imagenes\Spices-Salt-Pepper.png" />
     <Resource Include="Imagenes\User-Group.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Imagenes\LogoFinal1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
