Caché implementado en cliente :)

--- a/RestaurantSigloXXI/Vista/App.config
+++ b/RestaurantSigloXXI/Vista/App.config
@@ -52,12 +52,8 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:32908/WSOKCasa/WSLOGIN" binding="basicHttpBinding"
-        bindingConfiguration="WSLOGINPortBinding" contract="WSLOGIN.WSLOGIN"
-        name="WSLOGINPort" />
-      <endpoint address="http://localhost:32908/WSBancoEstado/WS_BANCO"
-        binding="basicHttpBinding" bindingConfiguration="WS_BANCOPortBinding"
-        contract="WSBancoEstado.WS_BANCO" name="WS_BANCOPort" />
+      <endpoint address="http://localhost:32908/WSOKCasa/WSLOGIN" binding="basicHttpBinding" bindingConfiguration="WSLOGINPortBinding" contract="WSLOGIN.WSLOGIN" name="WSLOGINPort" />
+      <endpoint address="http://localhost:32908/WSBancoEstado/WS_BANCO" binding="basicHttpBinding" bindingConfiguration="WS_BANCOPortBinding" contract="WSBancoEstado.WS_BANCO" name="WS_BANCOPort" />
     </client>
   </system.serviceModel>
 </configuration>
