--- a/RestaurantSigloXXI/Vista/packages.config
+++ b/RestaurantSigloXXI/Vista/packages.config
@@ -2,9 +2,14 @@
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
+  <package id="FileCache" version="3.3.0" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks" version="4.0.0" targetFramework="net452" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net452" />
   <package id="Oracle.ManagedDataAccess" version="19.7.0" targetFramework="net452" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.7.0" targetFramework="net452" />
+  <package id="System.Data.HashFunction.Core" version="2.0.0" targetFramework="net452" />
+  <package id="System.Data.HashFunction.Interfaces" version="2.0.0" targetFramework="net452" />
+  <package id="System.Data.HashFunction.xxHash" version="2.0.0" targetFramework="net452" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net452" />
 </packages>
