--- a/RestaurantSigloXXI/TESTProyecto/App.config
+++ b/RestaurantSigloXXI/TESTProyecto/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="OkCasa_Entities" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;PASSWORD=OKCasa;PERSIST SECURITY INFO=True;USER ID=OKCASA&quot;" providerName="System.Data.EntityClient" />
+    <add name="RSXXI_Entities" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;PASSWORD=RSXXI;PERSIST SECURITY INFO=True;USER ID=RSXXI&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
