--- a/RestaurantSigloXXI/Vista/App.config
+++ b/RestaurantSigloXXI/Vista/App.config
@@ -42,7 +42,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="OkCasa_Entities" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;PASSWORD=OKCasa;PERSIST SECURITY INFO=True;USER ID=OKCASA&quot;" providerName="System.Data.EntityClient" />
+    <add name="RSXXI_Entities" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;PASSWORD=RSXXI;PERSIST SECURITY INFO=True;USER ID=RSXXI&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.serviceModel>
     <bindings />
