--- a/RestaurantSigloXXI/BibliotecaClases/BibliotecaNegocio.csproj
+++ b/RestaurantSigloXXI/BibliotecaClases/BibliotecaNegocio.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bebida.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="CommonBC.cs" />
     <Compile Include="DaoErrores.cs" />
