--- a/RestaurantSigloXXI/BibliotecaClases/BibliotecaNegocio.csproj
+++ b/RestaurantSigloXXI/BibliotecaClases/BibliotecaNegocio.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Empleado.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Mesa.cs" />
+    <Compile Include="Orden.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoProducto.cs" />
