--- a/RestaurantSigloXXI/BibliotecaClases/BibliotecaNegocio.csproj
+++ b/RestaurantSigloXXI/BibliotecaClases/BibliotecaNegocio.csproj
@@ -61,13 +61,14 @@
     <Compile Include="Login.cs" />
     <Compile Include="Mesa.cs" />
     <Compile Include="Orden.cs" />
+    <Compile Include="PedidoProveedor.cs" />
     <Compile Include="Plato.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
     <Compile Include="Receta.cs" />
     <Compile Include="Reserva.cs" />
-    <Compile Include="Temporal.cs" />
+    <Compile Include="Articulo.cs" />
     <Compile Include="TipoProducto.cs" />
     <Compile Include="TipoUsuario.cs" />
     <Compile Include="TipoBebida.cs" />
